# Image-Processing

./: CMakeLists.txt  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  main.cpp
